# skillberry-agent

./: .gitignore  Dockerfile  Makefile  README.md  api_server.py  main.py  mcp_tools_agentic_graph.py  pyproject.toml  requirements.txt
.githooks/: pre-push
.mk/: dev.mk  development.mk  local.mk  process.mk
.stamps/: srv.env
agents/: agentic_graph.py  all_tools.py  code_missing_tools.py  code_python_function.py  common.py  execute_tools_with_parameters.py  find_existing_tools.py  find_useful_tools.py  generalize_python_function.py  mcp_tools.py  remote_tools_wrapper.py  state.py  test_execute_tools_with_parameters.py  tools_service_api.py  unittest_tools.py  vmcp_server_manager.py
client/python/skillberry_agent_sdk/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  pyproject.toml.bak  setup.py  setup.py.bak  tox.ini
client/python/skillberry_agent_sdk/.openapi-generator/: FILES
client/python/skillberry_agent_sdk/docs/: ChatApi.md  ChatMessage.md  ChatRequest.md  DefaultApi.md  HTTPValidationError.md  LocationInner.md  ValidationError.md
client/python/skillberry_agent_sdk/skillberry_agent_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  sdk_cli.py
client/python/skillberry_agent_sdk/test/: test_chat_api.py  test_chat_message.py  test_chat_request.py  test_default_api.py  test_http_validation_error.py  test_location_inner.py  (+1 more)
config/: config.py  config_structure.py  config_ui.py  test_env_loader.py
data_model/: virtual_mcp_server.py
docs/: ports-and-env-vars.md  skillberry-store-communication.md
fast_api/: api_server.py  git_version.py
llm/: common.py
shared/python/skillberry_agent_lib/: README.md  pyproject.toml
utils/: skillberry_api.py  tools_maker_api.py  tools_service_api.py
(+21 files in other folders)
